fix: footer blocks content on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -17,7 +17,7 @@ footer {
     flex: 0 1;
     text-align: center;
     font-size: small;
-    margin-top: 11%;
+    margin-top: 15%;
 }
 
 footer > p {
